[package]
name = "thanix_client"
version = "0.2.0"
authors = ["Christopher Hock <christopher-hock@protonmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_qs = "0.12.0"
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
